--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
      name: Update npm
      command: 'sudo npm install'
   - run:
-     name: Run ember build
-     command: 'sudo SAUCELAB_USERNAME=$SAUCELAB_USERNAME SAUCELAB_ACCESSKEY = $SAUCELAB_ACCESSKEY npm run test'
+     name: Run test script
+     command: 'sudo SAUCELAB_USERNAME=$SAUCELAB_USERNAME SAUCELAB_ACCESSKEY=$SAUCELAB_ACCESSKEY npm run test'
 
   
 workflows:
