--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,8 @@ jobs:
 workflows:
   version: 2
   deploy:
+    triggers:
+       - schedule:
+           cron: "15 * * * * 'America/Los_Angeles'"
     jobs:
       - test_dev
