--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,9 @@ workflows:
      triggers:
        - schedule:
            cron: "0 0 * * *"
-  
+           filters:
+            branches:
+              only:
+                - master  
      jobs:
        - test-dev
