--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ workflows:
    test:
      triggers:
        - schedule:
-           cron: "0 0 * * *"
+           cron: "0 30 * * * 'America/Los_Angeles'"
            filters:
             branches:
               only:
