--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "hgne2etests",
+  "name": "selenium-mocha",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sample project to indicate how to  create end to end UI tests using Selenium using Mocha framework with futute compliant JavaScript and orchaterate nightly running of test cases on Sauce Labs with CircleCI.",
   "main": "index.js",
   "scripts": {
     "test": "mocha --opts ./mocha.opts './src/tests/*.js'",
     "testprod" : "mocha --opts ./mocha.opts './src/tests/*.js' --grep @NoProd --invert"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "saucelabs": "^1.5.0",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shubmittal/Selenium-Mocha.git"
   },
+  "keywords": [
+    "Selenium",
+    "Node.js",
+    "SauceLabs",
+    "CircleCI",
+    "JavaScript",
+    "Mocha",
+    "Babel7",
+    "React",
+    "WebDriver",
+    "Chai"
+  ],
+  "author": "Shubhra Mittal",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shubmittal/Selenium-Mocha/issues"
+  },
+  "homepage": "https://github.com/shubmittal/Selenium-Mocha#readme",
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.5",
@@ -23,5 +38,10 @@
     "@babel/register": "^7.0.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "saucelabs": "^1.5.0",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
